2.82 crash when changing image from tiled to single #73898

Closed
opened 2020-02-16 23:27:53 +01:00 by Robert Rioux · 5 comments

System Information
Operating system: 10.12.6
Graphics card: nVidia 960

Blender Version
Broken: 2.82 2020-01-12
Worked: (optional)

Short description of error
2.82 crash when changing image from tiled to single

Exact steps for others to reproduce the error

Just change from tiled to single in the attached file.Archive 2.zip

I also had issues with UDIM when one of the textures was missing. It uses another UDIM texture instead. In the included file, try to change the name of one of the textures, let's say 104 to 1014, reload the image and one side of the cube will get texture 1.5 instead of nothing, as it should be (or maybe it should be bight pink to indicate the right texture wasn't found.

**System Information** Operating system: 10.12.6 Graphics card: nVidia 960 **Blender Version** Broken: 2.82 2020-01-12 Worked: (optional) **Short description of error** 2.82 crash when changing image from tiled to single **Exact steps for others to reproduce the error** Just change from tiled to single in the attached file.[Archive 2.zip](https://archive.blender.org/developer/F8343901/Archive_2.zip) I also had issues with UDIM when one of the textures was missing. It uses another UDIM texture instead. In the included file, try to change the name of one of the textures, let's say 104 to 1014, reload the image and one side of the cube will get texture 1.5 instead of nothing, as it should be (or maybe it should be bight pink to indicate the right texture wasn't found.
Author

Added subscriber: @Funnybob

Added subscriber: @Funnybob

This issue was referenced by 332b7d7d94

This issue was referenced by 332b7d7d94e04dc1068c3f1fa61b486033d575f1

This issue was referenced by d6977b5387

This issue was referenced by d6977b5387919e5053527e8918002875dae5ad83

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-17 02:34:46 +01:00
Author

Already fixed!?! You guys are mind-blowing! I logged some bugs for Maya in 1999 and they are still not resolved, seriously! Keep up the amazing work!

Already fixed!?! You guys are mind-blowing! I logged some bugs for Maya in 1999 and they are still not resolved, seriously! Keep up the amazing work!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73898
No description provided.