Fix T73898: UDIM crash changing form tiled to single